# ai-

./: README.md  aidev.db
1/1/: CMakeLists.txt  README.md  RequirementParser.cpp  RequirementParser.hpp  TaskDecompositionEngine.cpp  TaskDecompositionEngine.hpp  build.bat  helloworld.cpp  main.cpp
AIDevSystem/: AIDevSystem.sln
AIDevSystem/src/AIDevSystem/: AIDevSystem.csproj  App.xaml  App.xaml.cs  Converters.cs  MainWindow.xaml  MainWindow.xaml.cs
AIDevSystem/src/AIDevSystem/Controls/: ActivityIndicator.xaml  ActivityIndicator.xaml.cs
AIDevSystem/src/AIDevSystem/Infrastructure/: ClaudeAdapter.cs  CliResult.cs  CliRunner.cs  Database.cs  DeepSeekApiClient.cs  ReasonXAdapter.cs
AIDevSystem/src/AIDevSystem/Models/: ChatMessage.cs  ModelScore.cs  Project.cs  TaskExecution.cs  TaskItem.cs
AIDevSystem/src/AIDevSystem/Resources/: appsettings.json
AIDevSystem/src/AIDevSystem/Services/: BuildService.cs  ChatService.cs  ITaskManager.cs  MemoryService.cs  PMReviewService.cs  ProgressTracker.cs  ScoreService.cs  TaskDecomposer.cs  TaskExecutor.cs  TaskManager.cs
AIDevSystem/src/AIDevSystem/Themes/: DarkTheme.xaml
AIDevSystem/src/AIDevSystem/ViewModels/: BaseViewModel.cs  ChatViewModel.cs  DashboardViewModel.cs  HelpViewModel.cs  MainViewModel.cs  ProjectListViewModel.cs  RelayCommand.cs  SettingsViewModel.cs  (+1 more)
AIDevSystem/tests/AIDevSystem.Tests/: AIDevSystem.Tests.csproj
agent_memory/_templates/: session-reflection.md
agent_memory/claude/: 2026-06-05-prd-review.md
agent_memory/reasonix/: 2026-06-05-p1-build.md  2026-06-05-round2-fixes.md
(+14 files in other folders)
